--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.html
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.html
@@ -64,9 +64,14 @@
                  ng-class="{'embedded-content__item-name--empty': !item.name}" />
         </div>
         <div class="embedded-content__item-content-body">
-          <umb-property ng-repeat="property in item.properties" property="property">
-            <umb-editor model="property" set-files="ctrl.setFiles(files)" embedded-content-files-watcher></umb-editor>
-          </umb-property>
+          <div ng-repeat="tab in item.tabs track by tab.alias">
+            <div class="embedded-content__section-title" ng-if="item.tabs.length > 1">{{tab.label}}</div>
+            <div class="embedded-content__properties">
+              <umb-property ng-repeat="property in tab.properties track by property.alias" property="property">
+                <umb-editor model="property" set-files="ctrl.setFiles(files)" embedded-content-files-watcher></umb-editor>
+              </umb-property>
+            </div>
+          </div>
         </div>
       </div>
     </div>
