--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.prevalues.html
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.prevalues.html
@@ -22,7 +22,7 @@
           <span>{{item.name}}</span>
           <small class="embedded-content__content-type-name">{{item.documentTypeAlias}}</small>
         </div>
-        <div class="embedded-content__has-config" ng-if="item.nameTemplate">
+        <div class="embedded-content__has-config" ng-if="item.hasConfig">
           <localize key="grid_settingsApplied" />
         </div>
         <div class="embedded-content__tools">
