--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.html
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.html
@@ -67,9 +67,8 @@
           <div ng-repeat="tab in item.tabs track by tab.alias">
             <div class="embedded-content__section-title" ng-if="item.tabs.length > 1">{{tab.label}}</div>
             <div class="embedded-content__properties">
-              <umb-property ng-repeat="property in tab.properties track by property.alias" property="property">
-                <umb-editor model="property" set-files="ctrl.setFiles(files)" embedded-content-item="item" embedded-content-property></umb-editor>
-              </umb-property>
+              <embedded-content-property ng-repeat="property in tab.properties track by property.alias" property="property" embedded-content-item="item" set-files="ctrl.setFiles(files)">
+              </embedded-content-property>
             </div>
           </div>
         </div>
