Fix event not passed to editSettings() function

--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.prevalues.html
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.prevalues.html
@@ -9,7 +9,7 @@
 
     <div class="embedded-content__tools">
        <div class="embedded-content__tools-tool">
-         <i class="icon icon-settings" title="@embeddedContent_settings" localize="title" ng-click="ctrl.editSettings()"></i>
+         <i class="icon icon-settings" title="@embeddedContent_settings" localize="title" ng-click="ctrl.editSettings($event)"></i>
        </div>
     </div>
   </div>
