--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.html
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.html
@@ -2,7 +2,6 @@
 
   <div class="embedded-content__title-bar">
     <div class="embedded-content__title-bar-title">{{ctrl.label}}</div>
-    <!-- Maybe add model.description? -->
 
     <div class="embedded-content__has-config" ng-if="ctrl.hasConfig">
       <localize key="grid_settingsApplied" />
@@ -14,6 +13,7 @@
        </div>
     </div>
   </div>
+  <div class="embedded-content__description" ng-bind-html="ctrl.description"></div>
 
   <div ui-sortable="ctrl.sortableOptions" ng-model="model.value">
     <div class="embedded-content__item"
