Clean up config UI, add filtering and grouping

--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.html
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.html
@@ -97,6 +97,6 @@
     ng-if="ctrl.contentTypeOverlay.show"
     model="ctrl.contentTypeOverlay"
     view="ctrl.contentTypeOverlay.view"
-    position="target">
+    position="{{ctrl.config.groups.length ? 'right' : 'target'}}">
   </umb-overlay>
 </div>
