--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.prevalues.html
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/embeddedcontent.prevalues.html
@@ -15,28 +15,88 @@
   </div>
 
   <div class="control-group umb-control-group">
-    <div class="embedded-content__item" ng-repeat="item in model.value.documentTypes">
-      <div class="embedded-content__control-bar">
+    <div class="embedded-content__item"
+         ng-class="{
+           'embedded-content__item--active': item.active
+         }"
+         ng-repeat="item in model.value.documentTypes"
+         on-outside-click="ctrl.deactivate(item)"
+         ng-form>
+      <div class="embedded-content__control-bar" ng-click="ctrl.toggle(item)">
         <div class="embedded-content__item-title">
           <i class="icon {{item.icon}}"></i>
           <span>{{item.name}}</span>
           <small class="embedded-content__content-type-name">{{item.documentTypeAlias}}</small>
         </div>
-        <div class="embedded-content__has-config" ng-if="item.hasConfig">
-          <localize key="grid_settingsApplied" />
-        </div>
         <div class="embedded-content__tools">
           <div class="embedded-content__tools-tool">
-            <i class="icon icon-settings" title="@embeddedContent_settings" localize="title" ng-click="ctrl.editItemSettings(item, $event)"></i>
-          </div>
-          <div class="embedded-content__tools-tool">
-            <i class="embedded-content__tools-icon icon-trash" ng-click="ctrl.togglePrompt(item)"></i>
+            <i class="embedded-content__tools-icon icon-trash" ng-click="ctrl.togglePrompt(item, $event)"></i>
             <umb-confirm-action
               ng-if="item.deletePrompt"
               direction="left"
               on-confirm="ctrl.remove($index)"
-              on-cancel="ctrl.hidePrompt(item)">
+              on-cancel="ctrl.hidePrompt(item, $event)">
             </umb-confirm-action>
+          </div>
+        </div>
+      </div>
+      <div ng-show="item.active" ng-if="item.loaded">
+        <div class="embedded-content__item-content-body">
+          <div class="embedded-content__properties">
+            <div class="umb-property">
+              <div class="control-group umb-control-group">
+                <div class="umb-el-wrap">
+                  <label class="control-label" for="allowEditingName-{{$index}}">
+                    Allow editing name
+                    <small>If checked, a mandatory name property is added and the name template won't be used.</small>
+                  </label>
+                  <div class="controls">
+                    <input type="checkbox" id="allowEditingName-{{$index}}" ng-model="item.allowEditingName" ng-true-value="1" ng-false-value="0" />
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="umb-property">
+              <div class="control-group umb-control-group">
+                <div class="umb-el-wrap">
+                  <label class="control-label" for="nameTemplate-{{$index}}">
+                    Name template
+                    <small>Can be an angular expression or a simple text.</small>
+                  </label>
+                  <div class="controls">
+                    <input type="text" id="nameTemplate-{{$index}}" ng-model="item.nameTemplate" ng-disabled="item.allowEditingName === '1'"/>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="umb-property" ng-if="model.value.groups.length">
+              <div class="control-group umb-control-group">
+                <div class="umb-el-wrap">
+                  <label class="control-label" for="group-{{$index}}">
+                    Group
+                    <small><small>
+                  </label>
+                  <div class="controls">
+                    <select id="grpup-{{$index}}" ng-options="group as group for group in model.value.groups" ng-model="item.group">
+                      <option value=""></option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="umb-property">
+              <div class="control-group umb-control-group">
+                <div class="umb-el-wrap">
+                  <label class="control-label" for="maxInstances-{{$index}}">
+                    Maximum number of instances
+                    <small>How many instances of this item can be added?</small>
+                  </label>
+                  <div class="controls">
+                    <input type="number" id="maxInstances-{{$index}}" ng-model="item.maxInstances"/>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -53,7 +113,7 @@
     ng-if="ctrl.contentTypeOverlay.show"
     model="ctrl.contentTypeOverlay"
     view="ctrl.contentTypeOverlay.view"
-    position="target">
+    position="right">
   </umb-overlay>
 
   <umb-overlay
