Don't toggle item if deletion is cancelled

--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/app/embeddedcontent.html
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/app/embeddedcontent.html
@@ -47,7 +47,7 @@
               ng-if="item.deletePrompt"
               direction="left"
               on-confirm="ctrl.remove($index)"
-              on-cancel="ctrl.hidePrompt(item, $event)">
+              on-cancel="ctrl.hidePrompt(item)">
             </umb-confirm-action>
           </div>
         </div>
